# diwata_cli

./: Cargo.toml  README.md  build.sh  run_sakila.sh
public/: diwata.js  diwata.min.js  inlined_index.html
public/static/: app.js  diwata.js  diwata.min.js  index-cli.html  index.html  inline-cli.html
src/: main.rs
