
[package]
name = "diwata_cli"
version = "0.1.3"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
license = "MIT"
description = "Command line for diwata"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.1"
structopt-derive = "0.1"
hyper = "0.11"
futures = "0.1.14"
open = "1.2"

[dependencies.diwata_intel]
#path = "../intel"
version = "0.1"

[dependencies.diwata_server]
#path = "../server"
version = "0.1"

[dependencies.rustorm]
version = "0.10"
features = ["with-postgres", "with-sqlite"]


